@@ -46,6 +46,7 @@ StreamSearchModel::StreamSearchModel(QObject *parent)
     root->children.append(new StreamsModel::CategoryItem("http://opml.radiotime.com/Search.ashx", tr("TuneIn"), root, MonoIcon::icon(":tunein.svg", Utils::monoIconColor())));
     root->children.append(new StreamsModel::CategoryItem(QLatin1String("http://")+StreamsModel::constShoutCastHost+QLatin1String("/legacy/genrelist"), tr("ShoutCast"), root, MonoIcon::icon(":shoutcast.svg", Utils::monoIconColor())));
     root->children.append(new StreamsModel::CategoryItem(QLatin1String("http://")+StreamsModel::constDirbleHost+QLatin1String("/v2/search/"), tr("Dirble"), root, MonoIcon::icon(":station.svg", Utils::monoIconColor())));
+    root->children.append(new StreamsModel::CategoryItem(QLatin1String("http://")+StreamsModel::constCommunityHost+QLatin1String("/webservice/json/stations/byname/"), tr("Community Radio Browser"), root, MonoIcon::icon(FontAwesome::headphones, Utils::monoIconColor())));
     icon = MonoIcon::icon(FontAwesome::search, Utils::monoIconColor());
 }
 
@@ -288,6 +289,9 @@ void StreamSearchModel::search(const QString &searchTerm, bool stationsOnly)
             searchUrl=QUrl(item->url+searchTerm);
             ApiKeys::self()->addKey(query, ApiKeys::Dirble);
             break;
+        case CommunityRadio:
+            searchUrl=QUrl(item->url+searchTerm);
+            break;
         }
 
         searchUrl.setQuery(query);
@@ -333,9 +337,10 @@ void StreamSearchModel::jobFinished()
         if (job->ok()) {
             QList<StreamsModel::Item *> newItems;
             switch(root->children.indexOf(i)) {
-            case TuneIn:    newItems=StreamsModel::parseRadioTimeResponse(job->actualJob(), cat, true); break;
-            case ShoutCast: newItems=StreamsModel::parseShoutCastSearchResponse(job->actualJob(), cat); break;
-            case Dirble:    newItems=StreamsModel::parseDirbleStations(job->actualJob(), cat); break;
+            case TuneIn:         newItems=StreamsModel::parseRadioTimeResponse(job->actualJob(), cat, true); break;
+            case ShoutCast:      newItems=StreamsModel::parseShoutCastSearchResponse(job->actualJob(), cat); break;
+            case Dirble:         newItems=StreamsModel::parseDirbleStations(job->actualJob(), cat); break;
+            case CommunityRadio: newItems=StreamsModel::parseCommunityStations(job->actualJob(), cat); break;
             default : break;
             }
             if (!newItems.isEmpty()) {
